Imagens funcionando nos comunicados

--- a/communication/templates/communication/announcements.html
+++ b/communication/templates/communication/announcements.html
@@ -130,8 +130,8 @@
       >
         <img
           class="h-48 w-full rounded-2xl"
-          src="{% url 'img' 'announcements' announcement.pk %}"
-        />
+          src="https://projeto-demzer-midia.s3.us-east-1.amazonaws.com/announcements/{{ announcement.pk }}.jpg" alt="Imagem do anúncio"
+	/>
 
         <div class="m-5 mt-3">
           <p class="text-right text-xs text-gray-500" id="date">
