--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -20,6 +20,19 @@
       </span>
     </header>
     <ul class="flex flex-col gap-4" :class="open || 'scale-0'">
+      {% if user|has_role:'admin,coordinator' %}
+      <li>
+        <a href="{% url 'dashboard_admin' %}">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="h-6 w-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M3 3v18h18V3H3zm3 3h12v12H6V6zm3 3v6h6V9H9z"/>
+          </svg>
+          <span>Painel Admin</span>
+        </a>
+      </li>
+      {% endif %}
       <li>
         <a href="{% url 'dashboard' %}">
           {% if user|has_role:'admin,coordinator' %}
